More work on bug #8365.  The payroll report is in place, now.

--- a/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
@@ -38,6 +38,9 @@ COM_TIMECLOCK_PROJECT="Project"
 COM_TIMECLOCK_TIMESHEET_FOR="Timesheet for %s"
 COM_TIMECLOCK_DATE_TO_DATE="%s to %s"
 COM_TIMECLOCK_TIMESHEET_TITLE="Timesheet for %s - %s to %s"
+COM_TIMECLOCK_PAYROLL_TITLE="Payroll - %s to %s"
+COM_TIMECLOCK_PAYROLL="Payroll"
+
 COM_TIMECLOCK_ADD_HOURS="Add Hours"
 COM_TIMECLOCK_NOTES="Notes"
 COM_TIMECLOCK_NO_HOURS="No Hours"
