Department can now be set for a user.  This fixes #8371.

--- a/plg_user_timeclock/language/en-GB/en-GB.plg_user_timeclock.ini
+++ b/plg_user_timeclock/language/en-GB/en-GB.plg_user_timeclock.ini
@@ -72,3 +72,7 @@ PLG_USER_TIMECLOCK_USER_CHANGE_HISTORY_EMPTY="No changes yet."
 
 PLG_USER_TIMECLOCK_NO_TIME_BEFORE="No Time Entry Before"
 PLG_USER_TIMECLOCK_NO_TIME_BEFORE_DESC="The user will not be able to enter hours worked before this date.  This is to allow payperiods to be locked so users can't enter time in them anymore."
+
+PLG_USER_TIMECLOCK_DEPARTMENT="Department"
+PLG_USER_TIMECLOCK_DEPARTMENT_DESC="The department the user is associated with"
+
