This fixes bug #8373.  Payperiods can be locked now so that users can't enter time.  Time can still be entered in the administrator panel.  There was also some work for bug #8369.

--- a/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
@@ -120,3 +120,7 @@ COM_TIMECLOCK_UNKNOWN="Unknown"
 COM_TIMECLOCK_NO_NOTES_FOUND="No notes found"
 COM_HUGNET_REPORT_TYPE="Report Type"
 COM_TIMECLOCK_TIMECLOCK_DISABLED="Timeclock Disabled"
+
+COM_TIMECLOCK_PAYPERIOD_LOCKED="Payperiod Locked"
+COM_TIMECLOCK_PAYPERIOD_LOCK_FAILED="Payperiod Lock Failed"
+
