--- a/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -166,3 +166,6 @@ COM_TIMECLOCK_TIMECLOCK_PREFS_FOR="Préférences pour"
 
 COM_TIMECLOCK_WCOMP_NOT_ENABLED_MSG="Cette liste n'est pas activée.  Activer la compensation de travail svp."
 COM_TIMECLOCK_FOUND_A_BUG = " "
+
+COM_TIMECLOCK_PAYPERIOD_LOCKED="Payperiod Locked"
+COM_TIMECLOCK_PAYPERIOD_LOCK_FAILED="Payperiod Lock Failed"
