Work on bug #8369.  It mostly works, I just have to modify the templates, and set it up so that the saved data can be used.

--- a/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
@@ -124,3 +124,5 @@ COM_TIMECLOCK_TIMECLOCK_DISABLED="Timeclock Disabled"
 COM_TIMECLOCK_PAYPERIOD_LOCKED="Payperiod Locked"
 COM_TIMECLOCK_PAYPERIOD_LOCK_FAILED="Payperiod Lock Failed"
 
+COM_TIMECLOCK_REPORT_SAVED="Report saved!"
+COM_TIMECLOCK_REPORT_SAVE_FAILED="Report save failed."
