--- a/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -169,3 +169,6 @@ COM_TIMECLOCK_FOUND_A_BUG = " "
 
 COM_TIMECLOCK_PAYPERIOD_LOCKED="Payperiod Locked"
 COM_TIMECLOCK_PAYPERIOD_LOCK_FAILED="Payperiod Lock Failed"
+
+COM_TIMECLOCK_REPORT_SAVED="Report saved!"
+COM_TIMECLOCK_REPORT_SAVE_FAILED="Report save failed."
