--- a/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
@@ -123,6 +123,11 @@ COM_TIMECLOCK_TIMECLOCK_DISABLED="Timeclock Disabled"
 
 COM_TIMECLOCK_PAYPERIOD_LOCKED="Payperiod Locked"
 COM_TIMECLOCK_PAYPERIOD_LOCK_FAILED="Payperiod Lock Failed"
+COM_TIMECLOCK_PAYPERIOD_UNLOCKED="Payperiod Unlocked"
+COM_TIMECLOCK_PAYPERIOD_UNLOCK_FAILED="Payperiod Unlock Failed"
 
 COM_TIMECLOCK_REPORT_SAVED="Report saved!"
 COM_TIMECLOCK_REPORT_SAVE_FAILED="Report save failed."
+
+COM_TIMECLOCK_SAVED_DATA="Saved Data"
+COM_TIMECLOCK_LIVE_DATA="Live Data"
