--- a/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -169,6 +169,11 @@ COM_TIMECLOCK_FOUND_A_BUG = " "
 
 COM_TIMECLOCK_PAYPERIOD_LOCKED="Payperiod Locked"
 COM_TIMECLOCK_PAYPERIOD_LOCK_FAILED="Payperiod Lock Failed"
+COM_TIMECLOCK_PAYPERIOD_UNLOCKED="Payperiod Unlocked"
+COM_TIMECLOCK_PAYPERIOD_UNLOCK_FAILED="Payperiod Unlock Failed"
 
 COM_TIMECLOCK_REPORT_SAVED="Report saved!"
 COM_TIMECLOCK_REPORT_SAVE_FAILED="Report save failed."
+
+COM_TIMECLOCK_SAVED_DATA="Saved Data"
+COM_TIMECLOCK_LIVE_DATA="Live Data"
