--- a/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
@@ -126,6 +126,10 @@ COM_TIMECLOCK_PAYPERIOD_LOCK_FAILED="Payperiod Lock Failed"
 COM_TIMECLOCK_PAYPERIOD_UNLOCKED="Payperiod Unlocked"
 COM_TIMECLOCK_PAYPERIOD_UNLOCK_FAILED="Payperiod Unlock Failed"
 
+COM_TIMECLOCK_SAVE_REPORT="Save Report"
+COM_TIMECLOCK_LOCK_PAYPERIOD="Lock Payperiod"
+COM_TIMECLOCK_UNLOCK_PAYPERIOD="Lock Payperiod"
+
 COM_TIMECLOCK_REPORT_SAVED="Report saved!"
 COM_TIMECLOCK_REPORT_SAVE_FAILED="Report save failed."
 
