--- a/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -175,5 +175,9 @@ COM_TIMECLOCK_PAYPERIOD_UNLOCK_FAILED="Payperiod Unlock Failed"
 COM_TIMECLOCK_REPORT_SAVED="Report saved!"
 COM_TIMECLOCK_REPORT_SAVE_FAILED="Report save failed."
 
+COM_TIMECLOCK_SAVE_REPORT="Save Report"
+COM_TIMECLOCK_LOCK_PAYPERIOD="Lock Payperiod"
+COM_TIMECLOCK_UNLOCK_PAYPERIOD="Lock Payperiod"
+
 COM_TIMECLOCK_SAVED_DATA="Saved Data"
 COM_TIMECLOCK_LIVE_DATA="Live Data"
