Another language fix for bug #8373.

--- a/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
@@ -128,7 +128,7 @@ COM_TIMECLOCK_PAYPERIOD_UNLOCK_FAILED="Payperiod Unlock Failed"
 
 COM_TIMECLOCK_SAVE_REPORT="Save Report"
 COM_TIMECLOCK_LOCK_PAYPERIOD="Lock Payperiod"
-COM_TIMECLOCK_UNLOCK_PAYPERIOD="Lock Payperiod"
+COM_TIMECLOCK_UNLOCK_PAYPERIOD="Unlock Payperiod"
 
 COM_TIMECLOCK_REPORT_SAVED="Report saved!"
 COM_TIMECLOCK_REPORT_SAVE_FAILED="Report save failed."
