This fixes bug #2479.  Users can now mark their timesheets complete.

--- a/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -181,3 +181,9 @@ COM_TIMECLOCK_UNLOCK_PAYPERIOD="Unlock Payperiod"
 
 COM_TIMECLOCK_SAVED_DATA="Saved Data"
 COM_TIMECLOCK_LIVE_DATA="Live Data"
+
+COM_TIMECLOCK_TIMESHEET_DONE="Timesheet Done"
+COM_TIMECLOCK_PAYPERIOD_COMPLETE="Timesheet set to complete"
+COM_TIMECLOCK_PAYPERIOD_COMPLETE_FAILED="Timesheet NOT set to complete"
+COM_TIMECLOCK_COMPLETE="Complete"
+
