--- a/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
@@ -135,3 +135,9 @@ COM_TIMECLOCK_REPORT_SAVE_FAILED="Report save failed."
 
 COM_TIMECLOCK_SAVED_DATA="Saved Data"
 COM_TIMECLOCK_LIVE_DATA="Live Data"
+
+COM_TIMECLOCK_TIMESHEET_DONE="Timesheet Done"
+COM_TIMECLOCK_PAYPERIOD_COMPLETE="Timesheet set to complete"
+COM_TIMECLOCK_PAYPERIOD_COMPLETE_FAILED="Timesheet NOT set to complete"
+COM_TIMECLOCK_COMPLETE="Complete"
+
