This fixes #8375.  It now separates them into different tables.

--- a/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -187,3 +187,5 @@ COM_TIMECLOCK_PAYPERIOD_COMPLETE="Timesheet set to complete"
 COM_TIMECLOCK_PAYPERIOD_COMPLETE_FAILED="Timesheet NOT set to complete"
 COM_TIMECLOCK_COMPLETE="Complete"
 
+COM_TIMECLOCK_PAID_TIME="Paid Time"
+COM_TIMECLOCK_VOLUNTEER_TIME="Volunteer Time"
