Added a locked icon to the timesheet for bug #8365.

--- a/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -189,3 +189,5 @@ COM_TIMECLOCK_COMPLETE="Complete"
 
 COM_TIMECLOCK_PAID_TIME="Paid Time"
 COM_TIMECLOCK_VOLUNTEER_TIME="Volunteer Time"
+
+COM_TIMECLOCK_PAYPERIOD_LOCKED="This payperiod has been locked by an administrator so no time can be entered."
