This fixes #8381.  The report has been rearranged.

--- a/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.ini
@@ -173,6 +173,10 @@ COM_TIMECLOCK_DISABLE_MESSAGE_DESC = "This is the message that timeclock users w
 COM_TIMECLOCK_CODE_NOT_DEFINED = "Code Not Defined"
 COM_TIMECLOCK_CODE_NOT_ENABLED = "Code Not Enabled"
 
+COM_TIMECLOCK_FULLTIME_HOURS = "Hours Before Overtime"
+COM_TIMECLOCK_FULLTIME_HOURS_DESC="The maximum number of hours an employee needs to work before overtime is awarded."
+
+
 COM_TIMECLOCK_TIMESHEET = "Timesheet"
 COM_TIMECLOCK_TIMECLOCK_CUSTOMERS = "Timeclock Customers"
 COM_TIMECLOCK_FILTER = "Filter"
