--- a/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -82,6 +82,9 @@ COM_TIMECLOCK_PROJECT_REMOVE_FAILED="Erreur lors de la suppression du projet."
 
 COM_TIMECLOCK_PROJECT_NO_PROJECTS="Aucun projet à ajouter"
 
+COM_TIMECLOCK_FULLTIME_HOURS = "Hours Before Overtime"
+COM_TIMECLOCK_FULLTIME_HOURS_DESC="The maximum number of hours an employee needs to work before overtime is awarded."
+
 
 COM_TIMECLOCK_TIMESHEET_SAVED="Feuille de temps enregistrée!"
 
