--- a/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
@@ -53,6 +53,7 @@ COM_TIMECLOCK_WEEK_ABBREV="Wk"
 COM_TIMECLOCK_WEEK="Week"
 COM_TIMECLOCK_EXPORT_TO="Export to"
 COM_TIMECLOCK_PTO="PTO"
+COM_TIMECLOCK_OVERTIME="Overtime"
 COM_TIMECLOCK_HOLIDAY="Holiday"
 COM_TIMECLOCK_SUBTOTAL="Subtotal"
 COM_TIMECLOCK_SUBTOTAL_FOR="Subtotal %s for %s"
