--- a/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -70,6 +70,7 @@ COM_TIMECLOCK_WEEK="Semaine"
 COM_TIMECLOCK_EXPORT_TO="Exporté vers"
 
 COM_TIMECLOCK_PTO="Vacances"
+COM_TIMECLOCK_OVERTIME="Overtime"
 
 COM_TIMECLOCK_HOLIDAY="Fériés"
 COM_TIMECLOCK_SUBTOTAL="Subtotal"
