--- a/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -192,3 +192,5 @@ COM_TIMECLOCK_PAID_TIME="Paid Time"
 COM_TIMECLOCK_VOLUNTEER_TIME="Volunteer Time"
 
 COM_TIMECLOCK_PAYPERIOD_LOCKED="This payperiod has been locked by an administrator so no time can be entered."
+
+COM_TIMECLOCK_CLICK_TO_VIEW_TIMESHEET="Click here to view this users timesheet"
