Work on bug #8368.  It now flags if overtime and PTO are in the same week.

--- a/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
@@ -148,3 +148,5 @@ COM_TIMECLOCK_VOLUNTEER_TIME="Volunteer Time"
 COM_TIMECLOCK_PAYPERIOD_LOCKED="This payperiod has been locked by an administrator so no time can be entered."
 
 COM_TIMECLOCK_CLICK_TO_VIEW_TIMESHEET="Click here to view this users timesheet"
+
+COM_TIMECLOCK_ERROR_PTO_AND_OVERTIME="Error:  PTO and overtime in the same week"
