--- a/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -196,3 +196,5 @@ COM_TIMECLOCK_PAYPERIOD_LOCKED="This payperiod has been locked by an administrat
 COM_TIMECLOCK_CLICK_TO_VIEW_TIMESHEET="Click here to view this users timesheet"
 
 COM_TIMECLOCK_ERROR_PTO_AND_OVERTIME="Error:  PTO and overtime in the same week"
+
+COM_TIMECLOCK_REPORT="Report"
