More work on bug #8378.  The export now works.

--- a/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -47,6 +47,8 @@ COM_TIMECLOCK_DATE_TO_DATE="%s à %s"
 COM_TIMECLOCK_TIMESHEET_TITLE="Feuille de temps pour %s - %s à %s"
 COM_TIMECLOCK_PAYROLL_TITLE="Payroll - %s to %s"
 COM_TIMECLOCK_PAYROLL="Payroll"
+COM_TIMECLOCK_REPORT_TITLE="Time Report - %s to %s"
+COM_TIMECLOCK_REPORT="Time Report"
 
 COM_TIMECLOCK_ADD_HOURS="Ajouter temps"
 
@@ -196,5 +198,3 @@ COM_TIMECLOCK_PAYPERIOD_LOCKED="This payperiod has been locked by an administrat
 COM_TIMECLOCK_CLICK_TO_VIEW_TIMESHEET="Click here to view this users timesheet"
 
 COM_TIMECLOCK_ERROR_PTO_AND_OVERTIME="Error:  PTO and overtime in the same week"
-
-COM_TIMECLOCK_REPORT="Report"
