--- a/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
@@ -40,6 +40,8 @@ COM_TIMECLOCK_DATE_TO_DATE="%s to %s"
 COM_TIMECLOCK_TIMESHEET_TITLE="Timesheet for %s - %s to %s"
 COM_TIMECLOCK_PAYROLL_TITLE="Payroll - %s to %s"
 COM_TIMECLOCK_PAYROLL="Payroll"
+COM_TIMECLOCK_REPORT_TITLE="Time Report - %s to %s"
+COM_TIMECLOCK_REPORT="Time Report"
 
 COM_TIMECLOCK_ADD_HOURS="Add Hours"
 COM_TIMECLOCK_NOTES="Notes"
@@ -150,5 +152,3 @@ COM_TIMECLOCK_PAYPERIOD_LOCKED="This payperiod has been locked by an administrat
 COM_TIMECLOCK_CLICK_TO_VIEW_TIMESHEET="Click here to view this users timesheet"
 
 COM_TIMECLOCK_ERROR_PTO_AND_OVERTIME="Error:  PTO and overtime in the same week"
-
-COM_TIMECLOCK_REPORT="Report"
