Added the departments menu in for bug #8365.

--- a/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.sys.ini
+++ b/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.sys.ini
@@ -33,6 +33,7 @@ COM_TIMECLOCK_MENU="Timeclock"
 COM_TIMECLOCK_SUBMENU_PREFERENCES="Preferences"
 COM_TIMECLOCK_SUBMENU_USER_CONFIG="User Configurations"
 COM_TIMECLOCK_SUBMENU_CUSTOMERS="Customers"
+COM_TIMECLOCK_SUBMENU_DEPARTMENTS="Departments"
 COM_TIMECLOCK_SUBMENU_PROJECTS="Projects"
 COM_TIMECLOCK_SUBMENU_HOLIDAYS="Holidays"
 COM_TIMECLOCK_SUBMENU_TIMESHEETS="Timesheets"
