--- a/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.sys.ini
+++ b/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.sys.ini
@@ -37,6 +37,7 @@ COM_TIMECLOCK_SUBMENU_PREFERENCES="Préférences"
 COM_TIMECLOCK_SUBMENU_USER_CONFIG="Configuration utilisateurs"
 
 COM_TIMECLOCK_SUBMENU_CUSTOMERS="Clients"
+COM_TIMECLOCK_SUBMENU_DEPARTMENTS="Departments"
 
 COM_TIMECLOCK_SUBMENU_PROJECTS="Projets"
 
