--- a/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.ini
@@ -333,4 +333,8 @@ COM_TIMECLOCK_ACTION_REPORTS="Timeclock Reports"
 COM_TIMECLOCK_ACCESS_TIMESHEET_DESC="Allows users in the group to access their timesheet"
 COM_TIMECLOCK_ACCESS_REPORTS_DESC="Allows users in the group to access the timeclock reports"
 
+COM_TIMECLOCK_SELECT_CATEGORY="- Select Category -"
+COM_TIMECLOCK_SELECT_DEPARTMENT="- Select Department -"
+COM_TIMECLOCK_SELECT_CUSTOMER="- Select Customer -"
+
 COM_TIMECLOCK0="0"
