Added many more filters for bug #8386.

--- a/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.ini
@@ -336,5 +336,9 @@ COM_TIMECLOCK_ACCESS_REPORTS_DESC="Allows users in the group to access the timec
 COM_TIMECLOCK_SELECT_CATEGORY="- Select Category -"
 COM_TIMECLOCK_SELECT_DEPARTMENT="- Select Department -"
 COM_TIMECLOCK_SELECT_CUSTOMER="- Select Customer -"
+COM_TIMECLOCK_SELECT_YEAR="- Select Year -"
+COM_TIMECLOCK_SELECT_USER="- Select User -"
+COM_TIMECLOCK_SELECT_MANAGER="- Select Manager -"
+COM_TIMECLOCK_SELECT_CONTACT="- Select Contact -"
 
 COM_TIMECLOCK0="0"
