More work on the report filtering for bug #8378.  It mostly works.

--- a/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -198,3 +198,14 @@ COM_TIMECLOCK_PAYPERIOD_LOCKED="This payperiod has been locked by an administrat
 COM_TIMECLOCK_CLICK_TO_VIEW_TIMESHEET="Click here to view this users timesheet"
 
 COM_TIMECLOCK_ERROR_PTO_AND_OVERTIME="Error:  PTO and overtime in the same week"
+
+COM_TIMECLOCK_SELECT_CATEGORY="- Select Category -"
+COM_TIMECLOCK_SELECT_DEPARTMENT="- Select Department -"
+COM_TIMECLOCK_SELECT_CUSTOMER="- Select Customer -"
+COM_TIMECLOCK_SELECT_USER="- Select User -"
+COM_TIMECLOCK_SELECT_PROJECT_MANAGER="- Select Project Manager -"
+COM_TIMECLOCK_SELECT_USER_MANAGER="- Select User Manager -"
+
+COM_TIMECLOCK_REPORT_DATES="Report Dates"
+
+COM_TIMECLOCK_TOGGLE_ZERO="Toggle Zero"
