Finished the work on the generic report for bug #8378.

--- a/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
@@ -166,5 +166,7 @@ COM_TIMECLOCK_REPORT_DATES="Report Dates"
 COM_TIMECLOCK_VOLUNTEER="Volunteer"
 COM_TIMECLOCK_CONTROLS="Controls"
 
-COM_TIMECLOCK_TOGGLE_ZERO="Toggle Zero"
-COM_TIMECLOCK_TOGGLE_EMPTY="Toggle Empty"
+COM_TIMECLOCK_SHOW_ZERO="Show Zeros"
+COM_TIMECLOCK_HIDE_ZERO="Hide Zeros"
+COM_TIMECLOCK_SHOW_EMPTY="Show Empty"
+COM_TIMECLOCK_HIDE_EMPTY="Hide Empty"
