--- a/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -208,4 +208,7 @@ COM_TIMECLOCK_SELECT_USER_MANAGER="- Select User Manager -"
 
 COM_TIMECLOCK_REPORT_DATES="Report Dates"
 
-COM_TIMECLOCK_TOGGLE_ZERO="Toggle Zero"
+COM_TIMECLOCK_SHOW_ZERO="Show Zeros"
+COM_TIMECLOCK_HIDE_ZERO="Hide Zeros"
+COM_TIMECLOCK_SHOW_EMPTY="Show Empty"
+COM_TIMECLOCK_HIDE_EMPTY="Hide Empty"
