Work on bug #8389.  This exports the reports from the administrator panel.

--- a/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -567,5 +567,7 @@ COM_TIMECLOCK_SELECT_USER="- Select User -"
 COM_TIMECLOCK_SELECT_MANAGER="- Select Manager -"
 COM_TIMECLOCK_SELECT_CONTACT="- Select Contact -"
 
+COM_TIMECLOCK_EXPORT="Export"
+COM_TIMECLOCK_SELECT_FORMAT="Select Format"
 
 COM_TIMECLOCK0="0"
