A small fix for bug #8390.  It will now add the submenu for reports.

--- a/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.sys.ini
+++ b/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.sys.ini
@@ -44,6 +44,7 @@ COM_TIMECLOCK_SUBMENU_PROJECTS="Projets"
 COM_TIMECLOCK_SUBMENU_HOLIDAYS="Jours fériés"
 
 COM_TIMECLOCK_SUBMENU_TIMESHEETS="Feuille de temps"
+COM_TIMECLOCK_SUBMENU_REPORTS="Reports"
 
 COM_TIMECLOCK_SUBMENU_TOOLS="Outils"
 
