--- a/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.sys.ini
+++ b/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.sys.ini
@@ -37,6 +37,7 @@ COM_TIMECLOCK_SUBMENU_DEPARTMENTS="Departments"
 COM_TIMECLOCK_SUBMENU_PROJECTS="Projects"
 COM_TIMECLOCK_SUBMENU_HOLIDAYS="Holidays"
 COM_TIMECLOCK_SUBMENU_TIMESHEETS="Timesheets"
+COM_TIMECLOCK_SUBMENU_REPORTS="Reports"
 COM_TIMECLOCK_SUBMENU_TOOLS="Misc Tools"
 COM_TIMECLOCK_SUBMENU_ABOUT="About"
 
