Renamed the report stuff in the administrator to reports.  It was getting confused as to what model to load.  Bug #8390.

--- a/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.ini
@@ -48,6 +48,11 @@ COM_TIMECLOCK_CUSTOMER_FAILED="Error Saving Customer"
 COM_TIMECLOCK_DEPARTMENT_SAVED="Department Saved!"
 COM_TIMECLOCK_DEPARTMENT_FAILED="Error Saving Department"
 
+COM_TIMECLOCK_REPORT_SAVED="Report Saved!"
+COM_TIMECLOCK_REPORT_FAILED="Error Saving Report"
+COM_TIMECLOCK_REPORT_DELETED="Report Deleted!"
+COM_TIMECLOCK_REPORT_DELETE_FAILED="Error Deleting Report"
+
 COM_TIMECLOCK_HOLIDAY_SAVED="Holiday Saved!"
 COM_TIMECLOCK_HOLIDAY_FAILED="Error Saving Holiday"
 
