--- a/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -63,6 +63,11 @@ COM_TIMECLOCK_HOLIDAY_SAVED="Vacances enregistrées!"
 
 COM_TIMECLOCK_HOLIDAY_FAILED="Erreur à l'enregistrement des vacances!"
 
+COM_TIMECLOCK_REPORT_SAVED="Report Saved!"
+COM_TIMECLOCK_REPORT_FAILED="Error Saving Report"
+COM_TIMECLOCK_REPORT_DELETED="Report Deleted!"
+COM_TIMECLOCK_REPORT_DELETE_FAILED="Error Deleting Report"
+
 
 COM_TIMECLOCK_PROJECT_SAVED="Projet Enregistré!"
 
