Fixed some language files for bug #8365

--- a/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -576,3 +576,14 @@ COM_TIMECLOCK_EXPORT="Export"
 COM_TIMECLOCK_SELECT_FORMAT="Select Format"
 
 COM_TIMECLOCK0="0"
+
+COM_TIMECLOCK_EXTRA_PACKAGES="Extra Packages"
+COM_TIMECLOCK_EXTRA_PACKAGES_DESC="These are extra packages that add features to Timeclock"
+COM_TIMECLOCK_REPORT_IT_HERE="Report it here"
+COM_TIMECLOCK_BY="by"
+COM_TIMECLOCK_REPORTS="Reports"
+COM_TIMECLOCK_START_DATE="Start Date"
+COM_TIMECLOCK_END_DATE="End Date"
+COM_TIMECLOCK_START_DATE_USER_DESC="When this user starts"
+COM_TIMECLOCK_END_DATE_USER_DESC="When this user leaves. Leave blank if the user is still employed."
+COM_TIMECLOCK_ACTIVE_USER_DESC="Is this user active in the timeclock. &rsquo;No&rsquo; means they will not be able to access any sort of timeclock."
