--- a/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -212,3 +212,16 @@ COM_TIMECLOCK_SHOW_ZERO="Show Zeros"
 COM_TIMECLOCK_HIDE_ZERO="Hide Zeros"
 COM_TIMECLOCK_SHOW_EMPTY="Show Empty"
 COM_TIMECLOCK_HIDE_EMPTY="Hide Empty"
+
+COM_TIMECLOCK_RESET="Reset"
+COM_TIMECLOCK_FILTER="Filter"
+COM_TIMECLOCK_IN="in"
+COM_TIMECLOCK_REPORT_IT_HERE="Report it here"
+COM_TIMECLOCK_NO_NEW_HOURS="No new hours"
+COM_TIMECLOCK_UNKNOWN="Unknown"
+COM_TIMECLOCK_NO_NOTES_FOUND="No notes found"
+COM_HUGNET_REPORT_TYPE="Report Type"
+COM_TIMECLOCK_TIMECLOCK_DISABLED="Timeclock Disabled"
+COM_TIMECLOCK_SELECT_PROJECT_TYPE="- Select Project Type -"
+COM_TIMECLOCK_VOLUNTEER="Volunteer"
+COM_TIMECLOCK_CONTROLS="Controls"
