More work on bug #8369.  Save now works, I just need to make it smoother and cleaner.

--- a/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
@@ -170,3 +170,12 @@ COM_TIMECLOCK_SHOW_ZERO="Show Zeros"
 COM_TIMECLOCK_HIDE_ZERO="Hide Zeros"
 COM_TIMECLOCK_SHOW_EMPTY="Show Empty"
 COM_TIMECLOCK_HIDE_EMPTY="Hide Empty"
+
+COM_TIMECLOCK_SELECT_SAVED_REPORT="- Select Saved Report -"
+
+COM_TIMECLOCK_SAVE_REPORT="Save Report"
+COM_TIMECLOCK_NAME="Name"
+COM_TIMECLOCK_REPORT_NAME_DESC="This is the name of the report.  It is what will show up int he dropdown menu"
+COM_TIMECLOCK_DESCRIPTION="Description"
+COM_TIMECLOCK_REPORT_DESCRIPTION_DESC="This is a description for the report"
+
