--- a/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -225,3 +225,10 @@ COM_TIMECLOCK_TIMECLOCK_DISABLED="Timeclock Disabled"
 COM_TIMECLOCK_SELECT_PROJECT_TYPE="- Select Project Type -"
 COM_TIMECLOCK_VOLUNTEER="Volunteer"
 COM_TIMECLOCK_CONTROLS="Controls"
+
+COM_TIMECLOCK_SELECT_SAVED_REPORT="- Select Saved Report -"
+
+COM_TIMECLOCK_NAME="Name"
+COM_TIMECLOCK_REPORT_NAME_DESC="This is the name of the report.  It is what will show up int he dropdown menu"
+COM_TIMECLOCK_DESCRIPTION="Description"
+COM_TIMECLOCK_REPORT_DESCRIPTION_DESC="This is a description for the report"
