Some fixes for bug #8390.  Filtering of reports now works.

--- a/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.ini
@@ -350,3 +350,7 @@ COM_TIMECLOCK_EXPORT="Export"
 COM_TIMECLOCK_SELECT_FORMAT="Select Format"
 
 COM_TIMECLOCK0="0"
+
+COM_TIMECLOCK_SELECT_TYPE="- Select Type -"
+COM_TIMECLOCK_PAYROLL="Payroll"
+COM_TIMECLOCK_REPORT="Report"
