--- a/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -587,3 +587,7 @@ COM_TIMECLOCK_END_DATE="End Date"
 COM_TIMECLOCK_START_DATE_USER_DESC="When this user starts"
 COM_TIMECLOCK_END_DATE_USER_DESC="When this user leaves. Leave blank if the user is still employed."
 COM_TIMECLOCK_ACTIVE_USER_DESC="Is this user active in the timeclock. &rsquo;No&rsquo; means they will not be able to access any sort of timeclock."
+
+COM_TIMECLOCK_SELECT_TYPE="- Select Type -"
+COM_TIMECLOCK_PAYROLL="Payroll"
+COM_TIMECLOCK_REPORT="Report"
