Work on bug #8388.  For the add hours to all projects thing it work.  Not for the modal, yet.

--- a/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
@@ -179,3 +179,4 @@ COM_TIMECLOCK_REPORT_NAME_DESC="This is the name of the report.  It is what will
 COM_TIMECLOCK_DESCRIPTION="Description"
 COM_TIMECLOCK_REPORT_DESCRIPTION_DESC="This is a description for the report"
 
+COM_TIMECLOCK_MAX="Max"
