--- a/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -232,3 +232,5 @@ COM_TIMECLOCK_NAME="Name"
 COM_TIMECLOCK_REPORT_NAME_DESC="This is the name of the report.  It is what will show up int he dropdown menu"
 COM_TIMECLOCK_DESCRIPTION="Description"
 COM_TIMECLOCK_REPORT_DESCRIPTION_DESC="This is a description for the report"
+
+COM_TIMECLOCK_MAX="Max"
