Fixed the title of the report for bug #8378.

--- a/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
@@ -42,6 +42,8 @@ COM_TIMECLOCK_PAYROLL_TITLE="Payroll - %s to %s"
 COM_TIMECLOCK_PAYROLL="Payroll"
 COM_TIMECLOCK_REPORT_TITLE="Time Report - %s to %s"
 COM_TIMECLOCK_REPORT="Time Report"
+COM_TIMECLOCK_USERSUM_REPORT_TITLE="User Summary Report - %s to %s"
+COM_TIMECLOCK_USERSUM_REPORT="User Summary Report"
 
 COM_TIMECLOCK_ADD_HOURS="Add Hours"
 COM_TIMECLOCK_NOTES="Notes"
