--- a/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -234,3 +234,6 @@ COM_TIMECLOCK_DESCRIPTION="Description"
 COM_TIMECLOCK_REPORT_DESCRIPTION_DESC="This is a description for the report"
 
 COM_TIMECLOCK_MAX="Max"
+
+COM_TIMECLOCK_USERSUM_REPORT_TITLE="User Summary Report - %s to %s"
+COM_TIMECLOCK_USERSUM_REPORT="User Summary Report"
