--- a/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
@@ -44,6 +44,11 @@ COM_TIMECLOCK_REPORT_TITLE="Time Report - %s to %s"
 COM_TIMECLOCK_REPORT="Time Report"
 COM_TIMECLOCK_USERSUM_REPORT_TITLE="User Summary Report - %s to %s"
 COM_TIMECLOCK_USERSUM_REPORT="User Summary Report"
+COM_TIMECLOCK_HOURSUM_REPORT_TITLE="Hours Summary Report - %s to %s"
+COM_TIMECLOCK_HOURSUM_REPORT="Hours Summary Report"
+
+COM_TIMECLOCK_DEPARTMENT="Department"
+COM_TIMECLOCK_HOURSUM_PROJ_MANAGER_PLOT_TITLE="Hours by Project Manager"
 
 COM_TIMECLOCK_ADD_HOURS="Add Hours"
 COM_TIMECLOCK_NOTES="Notes"
