--- a/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -237,3 +237,10 @@ COM_TIMECLOCK_MAX="Max"
 
 COM_TIMECLOCK_USERSUM_REPORT_TITLE="User Summary Report - %s to %s"
 COM_TIMECLOCK_USERSUM_REPORT="User Summary Report"
+
+COM_TIMECLOCK_HOURSUM_REPORT_TITLE="Hours Summary Report - %s to %s"
+COM_TIMECLOCK_HOURSUM_REPORT="Hours Summary Report"
+
+COM_TIMECLOCK_DEPARTMENT="Department"
+
+COM_TIMECLOCK_HOURSUM_PROJ_MANAGER_PLOT_TITLE="Hours by Project Manager"
