--- a/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -244,3 +244,5 @@ COM_TIMECLOCK_HOURSUM_REPORT="Hours Summary Report"
 COM_TIMECLOCK_DEPARTMENT="Department"
 
 COM_TIMECLOCK_HOURSUM_PROJ_MANAGER_PLOT_TITLE="Hours by Project Manager"
+
+COM_TIMECLOCK_HOURS_BY_PROJ_MANAGER="Hours by Project Manager"
