--- a/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
@@ -52,6 +52,9 @@ COM_TIMECLOCK_HOURSUM_PROJ_MANAGER_PLOT_TITLE="Hours by Project Manager"
 COM_TIMECLOCK_HOURS_BY_PROJ_MANAGER="Hours by Project Manager"
 COM_TIMECLOCK_HOURSUM_USER_MANAGER_PLOT_TITLE="Hours by User Manager"
 COM_TIMECLOCK_HOURS_BY_USER_MANAGER="Hours by User Manager"
+COM_TIMECLOCK_PROJECT_TYPE="Project Type"
+COM_TIMECLOCK_HOURSUM_PROJECT_TYPE_PLOT_TITLE="Hours by Project Type"
+COM_TIMECLOCK_HOURS_BY_PROJECT_TYPE="Hours by Project Type"
 
 COM_TIMECLOCK_ADD_HOURS="Add Hours"
 COM_TIMECLOCK_NOTES="Notes"
