Added hours by category for bug #8366.

--- a/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
@@ -55,6 +55,9 @@ COM_TIMECLOCK_HOURS_BY_USER_MANAGER="Hours by User Manager"
 COM_TIMECLOCK_PROJECT_TYPE="Project Type"
 COM_TIMECLOCK_HOURSUM_PROJECT_TYPE_PLOT_TITLE="Hours by Project Type"
 COM_TIMECLOCK_HOURS_BY_PROJECT_TYPE="Hours by Project Type"
+COM_TIMECLOCK_CATEGORY="Category"
+COM_TIMECLOCK_HOURSUM_CATEGORY_PLOT_TITLE="Hours by Category"
+COM_TIMECLOCK_HOURS_BY_CATEGORY="Hours by Category"
 
 COM_TIMECLOCK_ADD_HOURS="Add Hours"
 COM_TIMECLOCK_NOTES="Notes"
