More work on bug #8366.  I added by dept and by customer.

--- a/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
@@ -58,6 +58,10 @@ COM_TIMECLOCK_HOURS_BY_PROJECT_TYPE="Hours by Project Type"
 COM_TIMECLOCK_CATEGORY="Category"
 COM_TIMECLOCK_HOURSUM_CATEGORY_PLOT_TITLE="Hours by Category"
 COM_TIMECLOCK_HOURS_BY_CATEGORY="Hours by Category"
+COM_TIMECLOCK_HOURSUM_CUSTOMER_PLOT_TITLE="Hours by Customer"
+COM_TIMECLOCK_HOURS_BY_CUSTOMER="Hours by Customer"
+COM_TIMECLOCK_HOURSUM_CUSTOMER_PLOT_TITLE="Hours by Department"
+COM_TIMECLOCK_HOURS_BY_CUSTOMER="Hours by Department"
 
 COM_TIMECLOCK_ADD_HOURS="Add Hours"
 COM_TIMECLOCK_NOTES="Notes"
