--- a/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -257,3 +257,6 @@ COM_TIMECLOCK_HOURS_BY_PROJECT_TYPE="Hours by Project Type"
 COM_TIMECLOCK_CATEGORY="Category"
 COM_TIMECLOCK_HOURSUM_CATEGORY_PLOT_TITLE="Hours by Category"
 COM_TIMECLOCK_HOURS_BY_CATEGORY="Hours by Category"
+
+COM_TIMECLOCK_HOURSUM_CUSTOMER_PLOT_TITLE="Hours by Customer"
+COM_TIMECLOCK_HOURS_BY_CUSTOMER="Hours by Customer"
