--- a/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -260,3 +260,6 @@ COM_TIMECLOCK_HOURS_BY_CATEGORY="Hours by Category"
 
 COM_TIMECLOCK_HOURSUM_CUSTOMER_PLOT_TITLE="Hours by Customer"
 COM_TIMECLOCK_HOURS_BY_CUSTOMER="Hours by Customer"
+
+COM_TIMECLOCK_HOURSUM_DEPARTMENT_PLOT_TITLE="Hours by Department"
+COM_TIMECLOCK_HOURS_BY_DEPARTMENT="Hours by Department"
