Added hours by project for bug #8366.

--- a/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -263,3 +263,6 @@ COM_TIMECLOCK_HOURS_BY_CUSTOMER="Hours by Customer"
 
 COM_TIMECLOCK_HOURSUM_DEPARTMENT_PLOT_TITLE="Hours by Department"
 COM_TIMECLOCK_HOURS_BY_DEPARTMENT="Hours by Department"
+
+COM_TIMECLOCK_HOURSUM_PROJECT_PLOT_TITLE="Hours by Project"
+COM_TIMECLOCK_HOURS_BY_PROJECT="Hours by Project"
