Added hours by user.  This fixes #8366.

--- a/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
@@ -64,6 +64,8 @@ COM_TIMECLOCK_HOURSUM_DEPARTMENT_PLOT_TITLE="Hours by Department"
 COM_TIMECLOCK_HOURS_BY_DEPARTMENT="Hours by Department"
 COM_TIMECLOCK_HOURSUM_PROJECT_PLOT_TITLE="Hours by Project"
 COM_TIMECLOCK_HOURS_BY_PROJECT="Hours by Project"
+COM_TIMECLOCK_HOURSUM_USER_PLOT_TITLE="Hours by User"
+COM_TIMECLOCK_HOURS_BY_USER="Hours by User"
 
 COM_TIMECLOCK_ADD_HOURS="Add Hours"
 COM_TIMECLOCK_NOTES="Notes"
