--- a/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -266,3 +266,6 @@ COM_TIMECLOCK_HOURS_BY_DEPARTMENT="Hours by Department"
 
 COM_TIMECLOCK_HOURSUM_PROJECT_PLOT_TITLE="Hours by Project"
 COM_TIMECLOCK_HOURS_BY_PROJECT="Hours by Project"
+
+COM_TIMECLOCK_HOURSUM_USER_PLOT_TITLE="Hours by User"
+COM_TIMECLOCK_HOURS_BY_USER="Hours by User"
