It now doesn't allow users to be added to categories for bug #8365.

--- a/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -591,3 +591,5 @@ COM_TIMECLOCK_ACTIVE_USER_DESC="Is this user active in the timeclock. &rsquo;No&
 COM_TIMECLOCK_SELECT_TYPE="- Select Type -"
 COM_TIMECLOCK_PAYROLL="Payroll"
 COM_TIMECLOCK_REPORT="Report"
+
+COM_TIMECLOCK_CATEGORY_NO_USERS="Categories can't have users attached to them."
