--- a/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.ini
@@ -65,6 +65,7 @@ COM_TIMECLOCK_PROJECTS_ADD_FAILED="Error Adding Projects"
 COM_TIMECLOCK_PROJECT_REMOVE_SAVED="Project Removed"
 COM_TIMECLOCK_PROJECT_REMOVE_FAILED="Error Removing Project"
 COM_TIMECLOCK_PROJECT_NO_PROJECTS="No projects to add"
+COM_TIMECLOCK_CATEGORY_NO_USERS="Categories can't have users attached to them."
 
 COM_TIMECLOCK_EXTRA_PACKAGES="Extra Packages"
 COM_TIMECLOCK_EXTRA_PACKAGES_DESC="These are extra packages that add features to Timeclock"
