Changed the report header for the Worker's comp report for bug #8378.

--- a/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -269,3 +269,6 @@ COM_TIMECLOCK_HOURS_BY_PROJECT="Hours by Project"
 
 COM_TIMECLOCK_HOURSUM_USER_PLOT_TITLE="Hours by User"
 COM_TIMECLOCK_HOURS_BY_USER="Hours by User"
+
+COM_TIMECLOCK_WCOMP_REPORT_TITLE="Worker's Comp Report - %s to %s"
+COM_TIMECLOCK_WCOMP_REPORT="Worker's Comp Report"
