Added hours by Worker's Comp Code for bug #8366.

--- a/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
@@ -68,6 +68,9 @@ COM_TIMECLOCK_HOURSUM_PROJECT_PLOT_TITLE="Hours by Project"
 COM_TIMECLOCK_HOURS_BY_PROJECT="Hours by Project"
 COM_TIMECLOCK_HOURSUM_USER_PLOT_TITLE="Hours by User"
 COM_TIMECLOCK_HOURS_BY_USER="Hours by User"
+COM_TIMECLOCK_WCOMP_CODE="Worker's Comp Code"
+COM_TIMECLOCK_HOURSUM_WCOMP_CODE_PLOT_TITLE="Hours by Worker's Comp Code"
+COM_TIMECLOCK_HOURS_BY_WCOMP_CODE="Hours by Worker's Comp Code"
 
 COM_TIMECLOCK_ADD_HOURS="Add Hours"
 COM_TIMECLOCK_NOTES="Notes"
