--- a/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -272,3 +272,8 @@ COM_TIMECLOCK_HOURS_BY_USER="Hours by User"
 
 COM_TIMECLOCK_WCOMP_REPORT_TITLE="Worker's Comp Report - %s to %s"
 COM_TIMECLOCK_WCOMP_REPORT="Worker's Comp Report"
+
+COM_TIMECLOCK_WCOMP_CODE="Worker's Comp Code"
+
+COM_TIMECLOCK_HOURSUM_WCOMP_CODE_PLOT_TITLE="Hours by Worker's Comp Code"
+COM_TIMECLOCK_HOURS_BY_WCOMP_CODE="Hours by Worker's Comp Code"
