Work on bug #8377.

--- a/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
@@ -48,6 +48,8 @@ COM_TIMECLOCK_HOURSUM_REPORT_TITLE="Hours Summary Report - %s to %s"
 COM_TIMECLOCK_HOURSUM_REPORT="Hours Summary Report"
 COM_TIMECLOCK_WCOMP_REPORT_TITLE="Worker's Comp Report - %s to %s"
 COM_TIMECLOCK_WCOMP_REPORT="Worker's Comp Report"
+COM_TIMECLOCK_YTD_REPORT_TITLE="Year to Date - %s to %s"
+COM_TIMECLOCK_YTD_REPORT="Year to Date"
 
 COM_TIMECLOCK_DEPARTMENT="Department"
 COM_TIMECLOCK_HOURSUM_PROJ_MANAGER_PLOT_TITLE="Hours by Project Manager"
