--- a/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -277,3 +277,6 @@ COM_TIMECLOCK_WCOMP_CODE="Worker's Comp Code"
 
 COM_TIMECLOCK_HOURSUM_WCOMP_CODE_PLOT_TITLE="Hours by Worker's Comp Code"
 COM_TIMECLOCK_HOURS_BY_WCOMP_CODE="Hours by Worker's Comp Code"
+
+COM_TIMECLOCK_YTD_REPORT_TITLE="Year to Date - %s to %s"
+COM_TIMECLOCK_YTD_REPORT="Year to Date"
