Some small fixes for bug #8377.

--- a/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
@@ -86,6 +86,7 @@ COM_TIMECLOCK_WEEK_ABBREV="Wk"
 COM_TIMECLOCK_WEEK="Week"
 COM_TIMECLOCK_EXPORT_TO="Export to"
 COM_TIMECLOCK_PTO="PTO"
+COM_TIMECLOCK_PTO_TAKEN="PTO Taken"
 COM_TIMECLOCK_OVERTIME="Overtime"
 COM_TIMECLOCK_HOLIDAY="Holiday"
 COM_TIMECLOCK_SUBTOTAL="Subtotal"
