Work toward bug #7337.  I got the timesheet routine to get an hours total for a time period working.

--- a/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.ini
@@ -104,6 +104,9 @@ COM_TIMECLOCK_WCOMP_SETTINGS_DESC="Settings for Worker&rsquo;s Compensation.  Th
 COM_TIMECLOCK_EXTRA_SETTINGS = "Misc"
 COM_TIMECLOCK_EXTRA_SETTINGS_DESC="Extra settings that have no other home."
 
+
+COM_TIMECLOCK_PAYPERIOD="Hourly"
+COM_TIMECLOCK_PAYPERIOD="Payperiod"
 COM_TIMECLOCK_PAYPERIOD_CUTOFF="No time entry before"
 COM_TIMECLOCK_PAYPERIOD_CUTOFF_DESC="This is the first day that time can be entered."
 COM_TIMECLOCK_PAYPERIOD_SPLIT="Payperiod subtotal length"
