--- a/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -593,3 +593,5 @@ COM_TIMECLOCK_PAYROLL="Payroll"
 COM_TIMECLOCK_REPORT="Report"
 
 COM_TIMECLOCK_CATEGORY_NO_USERS="Categories can't have users attached to them."
+
+COM_TIMECLOCK_PAYPERIOD="Payperiod"
