This fixes #7337.  PTO will now be accrued.  I am not real happy with the system.

--- a/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -282,3 +282,5 @@ COM_TIMECLOCK_YTD_REPORT_TITLE="Year to Date - %s to %s"
 COM_TIMECLOCK_YTD_REPORT="Year to Date"
 
 COM_TIMECLOCK_PTO_TAKEN="PTO Taken"
+
+COM_TIMECLOCK_PTO_ACCRUED="PTO Accrued"
