--- a/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
@@ -73,6 +73,7 @@ COM_TIMECLOCK_HOURS_BY_USER="Hours by User"
 COM_TIMECLOCK_WCOMP_CODE="Worker's Comp Code"
 COM_TIMECLOCK_HOURSUM_WCOMP_CODE_PLOT_TITLE="Hours by Worker's Comp Code"
 COM_TIMECLOCK_HOURS_BY_WCOMP_CODE="Hours by Worker's Comp Code"
+COM_TIMECLOCK_PTO_ACCRUED="PTO Accrued"
 
 COM_TIMECLOCK_ADD_HOURS="Add Hours"
 COM_TIMECLOCK_NOTES="Notes"
