Added a billable rate to the user for bug #8392.

--- a/plg_user_timeclock/language/fr-FR/fr-FR.plg_user_timeclock.ini
+++ b/plg_user_timeclock/language/fr-FR/fr-FR.plg_user_timeclock.ini
@@ -106,3 +106,6 @@ PLG_USER_TIMECLOCK_NO_TIME_BEFORE_DESC="The user will not be able to enter hours
 
 PLG_USER_TIMECLOCK_DEPARTMENT="Department"
 PLG_USER_TIMECLOCK_DEPARTMENT_DESC="The department the user is associated with"
+
+PLG_USER_TIMECLOCK_BILLABLE_RATE="Billable Rate"
+PLG_USER_TIMECLOCK_BILLABLE_RATE_DESC="The rate at which this user is billed out to customers"
