This fixes #8392.  This is a billing report.

--- a/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -284,3 +284,13 @@ COM_TIMECLOCK_YTD_REPORT="Year to Date"
 COM_TIMECLOCK_PTO_TAKEN="PTO Taken"
 
 COM_TIMECLOCK_PTO_ACCRUED="PTO Accrued"
+
+COM_TIMECLOCK_BILLING_REPORT_TITLE="Billing - %s to %s"
+COM_TIMECLOCK_BILLING_REPORT="Billing"
+
+COM_TIMECLOCK_COST="Cost"
+COM_TIMECLOCK_TOTAL_COST="Total Cost"
+
+COM_TIMECLOCK_BILLABLE_RATE="Billable Rate"
+
+COM_TIMECLOCK_BILLABLE_RATE_ZERO="Billable rate is zero for this user."
