--- a/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
@@ -50,6 +50,12 @@ COM_TIMECLOCK_WCOMP_REPORT_TITLE="Worker's Comp Report - %s to %s"
 COM_TIMECLOCK_WCOMP_REPORT="Worker's Comp Report"
 COM_TIMECLOCK_YTD_REPORT_TITLE="Year to Date - %s to %s"
 COM_TIMECLOCK_YTD_REPORT="Year to Date"
+COM_TIMECLOCK_BILLING_REPORT_TITLE="Billing - %s to %s"
+COM_TIMECLOCK_BILLING_REPORT="Billing"
+
+COM_TIMECLOCK_BILLABLE_RATE="Billable Rate"
+COM_TIMECLOCK_BILLABLE_RATE_ZERO="Billable rate is zero for this user."
+COM_TIMECLOCK_TOTAL_COST="Total Cost"
 
 COM_TIMECLOCK_DEPARTMENT="Department"
 COM_TIMECLOCK_HOURSUM_PROJ_MANAGER_PLOT_TITLE="Hours by Project Manager"
