Work on bug #7337.  Working on the Admin interface to PTO.

--- a/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.ini
@@ -185,6 +185,7 @@ COM_TIMECLOCK_CODE_NOT_ENABLED = "Code Not Enabled"
 COM_TIMECLOCK_FULLTIME_HOURS = "Hours Before Overtime"
 COM_TIMECLOCK_FULLTIME_HOURS_DESC="The maximum number of hours an employee needs to work before overtime is awarded."
 
+COM_TIMECLOCK_AUTOMATIC_ACCRUAL_NO_EDIT="Automatic Accrual can not be edited."
 
 COM_TIMECLOCK_TIMESHEET = "Timesheet"
 COM_TIMECLOCK_TIMECLOCK_CUSTOMERS = "Timeclock Customers"
@@ -206,6 +207,8 @@ COM_TIMECLOCK_NOTES = "Notes"
 COM_TIMECLOCK_TIMECLOCK_HOLIDAYS = "Timeclock Holidays"
 COM_TIMECLOCK_PROJECT = "Project"
 COM_TIMECLOCK_WORK_DATE = "Work Date"
+COM_TIMECLOCK_VALID_FROM = "Valid From"
+COM_TIMECLOCK_VALID_TO = "Valid To"
 COM_TIMECLOCK_TIMECLOCK_PROJECTS = "Timeclock Projects"
 COM_TIMECLOCK_TIMECLOCK_DEPARTMENTS = "Timeclock Departments"
 COM_TIMECLOCK_NONE = "None"
@@ -358,3 +361,14 @@ COM_TIMECLOCK0="0"
 COM_TIMECLOCK_SELECT_TYPE="- Select Type -"
 COM_TIMECLOCK_PAYROLL="Payroll"
 COM_TIMECLOCK_REPORT="Report"
+
+COM_TIMECLOCK_AUTOMATIC_ACCRUAL="Automatic Accrual"
+COM_TIMECLOCK_CARRYOVER="Carry Over"
+COM_TIMECLOCK_MANUAL="Manual Entry"
+COM_TIMECLOCK_DONATION="Donation"
+
+COM_TIMECLOCK_PTO_SAVED="PTO Saved"
+COM_TIMECLOCK_PTO_SAVE_FAILED="Failed to save PTO"
+COM_TIMECLOCK_PTO_DELETED="PTO Deleted"
+COM_TIMECLOCK_PTO_DELETE_FAILED="Failed to delete PTO"
+
