--- a/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -595,3 +595,21 @@ COM_TIMECLOCK_REPORT="Report"
 COM_TIMECLOCK_CATEGORY_NO_USERS="Categories can't have users attached to them."
 
 COM_TIMECLOCK_PAYPERIOD="Payperiod"
+
+COM_TIMECLOCK_DATE="Date"
+
+COM_TIMECLOCK_AUTOMATIC_ACCRUAL_NO_EDIT="Automatic Accrual can not be edited."
+
+COM_TIMECLOCK_VALID_FROM="Valid From"
+
+COM_TIMECLOCK_VALID_TO="Valid To"
+
+COM_TIMECLOCK_AUTOMATIC_ACCRUAL="Automatic Accrual"
+COM_TIMECLOCK_CARRYOVER="Carry Over"
+COM_TIMECLOCK_MANUAL="Manual Entry"
+COM_TIMECLOCK_DONATION="Donation"
+
+COM_TIMECLOCK_PTO_SAVED="PTO Saved"
+COM_TIMECLOCK_PTO_SAVE_FAILED="Failed to save PTO"
+COM_TIMECLOCK_PTO_DELETED="PTO Deleted"
+COM_TIMECLOCK_PTO_DELETE_FAILED="Failed to delete PTO"
