This is more work towards bug #7337.  The interface is mostly complete.  Just working on calculating current PTO.

--- a/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.ini
@@ -266,7 +266,7 @@ COM_TIMECLOCK_HOLIDAY_PAY_USER_DESC = "The percentage of holiday pay this user g
 COM_TIMECLOCK_PROJECTS_USER_DESC = "This is just a list of projects."
 COM_TIMECLOCK_CHANGE_HISTORY_USER_DESC = "This is a list of changes that have happened to this user"
 COM_TIMECLOCK_STATUS = "Status"
-COM_TIMECLOCK_PTO = "PTO"
+COM_TIMECLOCK_PTO = "Paid Time Off"
 COM_TIMECLOCK_ADD_PROJECTS = "Add Projects"
 COM_TIMECLOCK_ADD_PROJECTS_FROM_USER = "Add Projects from User"
 COM_TIMECLOCK_REMOVE_PROJECTS = "Remove Projects"
@@ -372,3 +372,9 @@ COM_TIMECLOCK_PTO_SAVE_FAILED="Failed to save PTO"
 COM_TIMECLOCK_PTO_DELETED="PTO Deleted"
 COM_TIMECLOCK_PTO_DELETE_FAILED="Failed to delete PTO"
 
+COM_TIMECLOCK_USER_PTO_DESC="The user this Paid Time Off is for"
+COM_TIMECLOCK_VALID_FROM_PTO_DESC="This is the first day that this Paid Time Off is valid.  It will be valid until the end of that year."
+COM_TIMECLOCK_HOURS_PTO_DESC="The number of hours of Paid Time Off to give this user.  This can be POSITIVE or NEGATIVE.  Positive gives the user PTO, negative takes it away."
+COM_TIMECLOCK_NOTES_PTO_DESC="Why are you giving this user Paid Time Off?"
+COM_TIMECLOCK_TYPE_PTO_DESC="Paid Time Off type.  Carryover is PTO from the previous year, Donation is from or to another user, Manual is just an adjustment of the users PTO."
+COM_TIMECLOCK_PTO_EDIT_DESC="<strong>Note:</strong> Both halves of a donation (giver and receiver) must be entered separately.  The entry for the giver should have negative hours to match the positive hours of the reveiver entry."
