--- a/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.sys.ini
+++ b/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.sys.ini
@@ -40,4 +40,4 @@ COM_TIMECLOCK_SUBMENU_TIMESHEETS="Timesheets"
 COM_TIMECLOCK_SUBMENU_REPORTS="Reports"
 COM_TIMECLOCK_SUBMENU_TOOLS="Misc Tools"
 COM_TIMECLOCK_SUBMENU_ABOUT="About"
-
+COM_TIMECLOCK_SUBMENU_PTO="Paid Time Off"
