--- a/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
@@ -99,6 +99,10 @@ COM_TIMECLOCK_HOLIDAY="Holiday"
 COM_TIMECLOCK_SUBTOTAL="Subtotal"
 COM_TIMECLOCK_SUBTOTAL_FOR="Subtotal %s for %s"
 COM_TIMECLOCK_TOTAL_FOR="Total for %s"
+COM_TIMECLOCK_PTO_MANUAL="PTO Manual"
+COM_TIMECLOCK_PTO_DONATION="PTO Donation"
+COM_TIMECLOCK_PTO_CURRENT="PTO Current"
+COM_TIMECLOCK_PTO_CARRYOVER="PTO Carryover"
 
 
 COM_TIMECLOCK_ADD_HOURS_TITLE="Add Hours for %s on %s"
