--- a/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -294,3 +294,9 @@ COM_TIMECLOCK_TOTAL_COST="Total Cost"
 COM_TIMECLOCK_BILLABLE_RATE="Billable Rate"
 
 COM_TIMECLOCK_BILLABLE_RATE_ZERO="Billable rate is zero for this user."
+
+COM_TIMECLOCK_PTO_MANUAL="PTO Manual"
+COM_TIMECLOCK_PTO_DONATION="PTO Donation"
+COM_TIMECLOCK_PTO_CURRENT="PTO Current"
+
+COM_TIMECLOCK_PTO_CARRYOVER="PTO Carryover"
