--- a/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
@@ -103,7 +103,7 @@ COM_TIMECLOCK_PTO_MANUAL="PTO Manual"
 COM_TIMECLOCK_PTO_DONATION="PTO Donation"
 COM_TIMECLOCK_PTO_CURRENT="PTO Current"
 COM_TIMECLOCK_PTO_CARRYOVER="PTO Carryover"
-
+COM_TIMECLOCK_TOTAL_WORKED="Total Worked"
 
 COM_TIMECLOCK_ADD_HOURS_TITLE="Add Hours for %s on %s"
 COM_TIMECLOCK_TOTAL_HOURS="Total Hours"
