--- a/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -300,3 +300,5 @@ COM_TIMECLOCK_PTO_DONATION="PTO Donation"
 COM_TIMECLOCK_PTO_CURRENT="PTO Current"
 
 COM_TIMECLOCK_PTO_CARRYOVER="PTO Carryover"
+
+COM_TIMECLOCK_TOTAL_WORKED="Total Worked"
