PTO Calculations are nominally correct for bug #7337.

--- a/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
@@ -105,6 +105,8 @@ COM_TIMECLOCK_PTO_CURRENT="PTO Current"
 COM_TIMECLOCK_PTO_CARRYOVER="PTO Carryover"
 COM_TIMECLOCK_TOTAL_WORKED="Total Worked"
 
+COM_TIMECLOCK_PTO_CURRENT_DESC="This number is NOT a simple sum of the PTO columns.  Carryover expires during the year, which makes this number complicated."
+
 COM_TIMECLOCK_ADD_HOURS_TITLE="Add Hours for %s on %s"
 COM_TIMECLOCK_TOTAL_HOURS="Total Hours"
 COM_TIMECLOCK_HOURS="Hours"
