--- a/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -621,3 +621,5 @@ COM_TIMECLOCK_NOTES_PTO_DESC="Why are you giving this user Paid Time Off?"
 COM_TIMECLOCK_TYPE_PTO_DESC="Paid Time Off type.  Carryover is PTO from the previous year, Donation is from or to another user, Manual is just an adjustment of the users PTO."
 
 COM_TIMECLOCK_PTO_EDIT_DESC="<strong>Note:</strong> Both halves of the donation (giver and receiver) must be entered separately.  The entry for the giver should have negative hours to match the positive hours of the reveiver."
+
+COM_TIMECLOCK_VALID_TO_PTO_DESC="This is only required for CARRYOVER.  This is when the carryover expires.  The default is used if left blank."
