--- a/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -302,3 +302,5 @@ COM_TIMECLOCK_PTO_CURRENT="PTO Current"
 COM_TIMECLOCK_PTO_CARRYOVER="PTO Carryover"
 
 COM_TIMECLOCK_TOTAL_WORKED="Total Worked"
+
+COM_TIMECLOCK_PTO_CURRENT_DESC="This number is NOT a simple sum of the PTO columns.  Carryover expires during the year, which makes this number complicated."
