This fixes the module for bug #8365.

--- a/mod_timeclockinfo/language/en-GB/en-GB.mod_timeclockinfo.ini
+++ b/mod_timeclockinfo/language/en-GB/en-GB.mod_timeclockinfo.ini
@@ -30,14 +30,14 @@
 MOD_TIMECLOCKINFO="Timeclock Info"
 MOD_TIMECLOCKINFO_DESC="Displays information about a users timeclock"
 
-MOD_TIMECLOCKINFO_YTD="YTD"
+MOD_TIMECLOCKINFO_YTD="YTD Hours"
 MOD_TIMECLOCKINFO_YTD_HOURS="Year-To-Date Hours"
 MOD_TIMECLOCKINFO_YTD_HOURS_DESC="Show the year to date hours"
-MOD_TIMECLOCKINFO_HOURS_PER_WEEK="Hours/Week"
+MOD_TIMECLOCKINFO_HOURS_PER_WEEK="Avg Hrs/Week"
 MOD_TIMECLOCKINFO_HOURS_PER_WEEK_DESC="Show the average hours per week."
 MOD_TIMECLOCKINFO_NEXT_HOLIDAY="Next Holiday"
 MOD_TIMECLOCKINFO_NEXT_HOLIDAY_DESC="Show the date of the next holiday"
 MOD_TIMECLOCKINFO_SHOW_PTO_STATUS="Show PTO Status"
 MOD_TIMECLOCKINFO_SHOW_PTO_STATUS_DESC="Show the user their current PTO status."
-MOD_TIMECLOCKINFO_PTO="PTO"
+MOD_TIMECLOCKINFO_PTO_BALANCE="Approx PTO"
 MOD_TIMECLOCKINFO_HOURS="hours"
