--- a/mod_timeclockinfo/language/fr-FR/fr-FR.mod_timeclockinfo.ini
+++ b/mod_timeclockinfo/language/fr-FR/fr-FR.mod_timeclockinfo.ini
@@ -52,6 +52,6 @@ MOD_TIMECLOCKINFO_SHOW_PTO_STATUS="Affiche le nombre d'heures de vacances"
 
 MOD_TIMECLOCKINFO_SHOW_PTO_STATUS_DESC="Affiche le statut des vacances de l'utilisateur"
 
-MOD_TIMECLOCKINFO_PTO="Vacances"
+MOD_TIMECLOCKINFO_PTO_BALANCE="Vacances Balance"
 
 MOD_TIMECLOCKINFO_HOURS="heures"
