--- a/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -198,6 +198,7 @@ COM_TIMECLOCK_PAYPERIOD_LOCKED="This payperiod has been locked by an administrat
 COM_TIMECLOCK_CLICK_TO_VIEW_TIMESHEET="Click here to view this users timesheet"
 
 COM_TIMECLOCK_ERROR_PTO_AND_OVERTIME="Error:  PTO and overtime in the same week"
+COM_TIMECLOCK_ERROR_USER_DISABLED_NO_END = "Error: User disabled, but has no end date listed"
 
 COM_TIMECLOCK_SELECT_CATEGORY="- Select Category -"
 COM_TIMECLOCK_SELECT_DEPARTMENT="- Select Department -"
