This is the fix for bug #1.  The general report can now be viewed in dollars or hours.

--- a/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
@@ -207,6 +207,8 @@ COM_TIMECLOCK_SELECT_PROJECT_MANAGER="- Select Project Manager -"
 COM_TIMECLOCK_SELECT_USER_MANAGER="- Select User Manager -"
 COM_TIMECLOCK_SELECT_PROJECT_TYPE="- Select Project Type -"
 
+COM_TIMECLOCK_MONEY="Money"
+
 COM_TIMECLOCK_REPORT_DATES="Report Dates"
 
 COM_TIMECLOCK_VOLUNTEER="Volunteer"
