This fixes #6.  A notes report has been added.

--- a/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
@@ -53,6 +53,9 @@ COM_TIMECLOCK_YTD_REPORT="Year to Date"
 COM_TIMECLOCK_BILLING_REPORT_TITLE="Billing - %s to %s"
 COM_TIMECLOCK_BILLING_REPORT="Billing"
 
+COM_TIMECLOCK_NOTES_REPORT_TITLE="Notes - %s to %s"
+COM_TIMECLOCK_NOTES_REPORT="Notes"
+
 COM_TIMECLOCK_BILLABLE_RATE="Billable Rate"
 COM_TIMECLOCK_BILLABLE_RATE_ZERO="Billable rate is zero for this user."
 COM_TIMECLOCK_TOTAL_COST="Total Cost"
