--- a/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.ini
@@ -129,6 +129,11 @@ COM_TIMECLOCK_YEAR="Year"
 COM_TIMECLOCK_CONFIGURATION="Timeclock Options"
 COM_TIMECLOCK_MAX_DAILY_HOURS = "Max Daily Hours"
 COM_TIMECLOCK_MAX_DAILY_HOURS_DESC="The maximum number of hours an employee is allowed to post in a day."
+COM_TIMECLOCK_MAX_DAILY_HOURS_PROJECT_DESC="The maximum number of hours an employee is allowed to post in a day in this project. 0 for unlimited."
+COM_TIMECLOCK_MAX_YEARLY_HOURS = "Max Yearly Hours"
+COM_TIMECLOCK_MAX_YEARLY_HOURS_PROJECT_DESC="The maximum number of hours an employee is allowed to post in this project in a year. 0 for unlimited."
+COM_TIMECLOCK_MIN_HOUR_INCREMENT = "Minimum Hour Increment"
+COM_TIMECLOCK_MIN_HOUR_INCREMENT_PROJECT_DESC="The smallest amount of time an employee is allowed to post in this project in a day. 0 for any."
 COM_TIMECLOCK_DECIMAL_PLACES = "Decimal Places"
 COM_TIMECLOCK_DECIMAL_PLACES_DESC = "Default number of decimal places to show."
 COM_TIMECLOCK_MINIMUM_NOTE = "Minimum Note"
