--- a/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -197,6 +197,18 @@ COM_TIMECLOCK_MAX_DAILY_HOURS = "Heures journalières maximum"
 
 COM_TIMECLOCK_MAX_DAILY_HOURS_DESC="Le nombre d'heures maximales qu'un employé est autorisé à effectuer"
 
+COM_TIMECLOCK_MAX_DAILY_HOURS_PROJECT_DESC="The maximum number of hours an employee is allowed to post in a day in this project. 0 for unlimited."
+
+COM_TIMECLOCK_MAX_YEARLY_HOURS = "Max Yearly Hours"
+
+COM_TIMECLOCK_MAX_YEARLY_HOURS_PROJECT_DESC="The maximum number of hours an employee is allowed to post in this project in a year. 0 for unlimited."
+
+COM_TIMECLOCK_MIN_HOUR_INCREMENT = "Minimum Hour Increment"
+
+COM_TIMECLOCK_MIN_HOUR_INCREMENT_PROJECT_DESC="The smallest amount of time an employee is allowed to post in this project in a day. 0 for any."
+
+COM_TIMECLOCK_DECIMAL_PLACES = "Decimal Places"
+
 COM_TIMECLOCK_DECIMAL_PLACES = "Nombre de décimales"
 
 COM_TIMECLOCK_DECIMAL_PLACES_DESC = "Nombres de décimales affichées par défaut."
