--- a/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -234,8 +234,6 @@ COM_TIMECLOCK_REPORT_NAME_DESC="This is the name of the report.  It is what will
 COM_TIMECLOCK_DESCRIPTION="Description"
 COM_TIMECLOCK_REPORT_DESCRIPTION_DESC="This is a description for the report"
 
-COM_TIMECLOCK_MAX="Max"
-
 COM_TIMECLOCK_USERSUM_REPORT_TITLE="User Summary Report - %s to %s"
 COM_TIMECLOCK_USERSUM_REPORT="User Summary Report"
 
@@ -305,3 +303,6 @@ COM_TIMECLOCK_PTO_CARRYOVER="PTO Carryover"
 COM_TIMECLOCK_TOTAL_WORKED="Total Worked"
 
 COM_TIMECLOCK_PTO_CURRENT_DESC="This number is NOT a simple sum of the PTO columns.  Carryover expires during the year, which makes this number complicated."
+
+COM_TIMECLOCK_MAX="Max"
+COM_TIMECLOCK_MIN="Min"
