Fixed all the database and language stuff for the new additions to the project.

--- a/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.ini
@@ -113,6 +113,7 @@ COM_TIMECLOCK_PAYPERIOD_SPLIT="Payperiod subtotal length"
 COM_TIMECLOCK_PAYPERIOD_SPLIT_DESC="This is the length of time to subtotal the payperiod at"
 
 COM_TIMECLOCK_HOLIDAY="Holiday"
+COM_TIMECLOCK_FLOATING_HOLIDAY="Floating Holiday"
 
 COM_TIMECLOCK_PAID_TIME_OFF = "Paid Time Off"
 COM_TIMECLOCK_WORKERS_COMP = "Worker&rsquo;s Compensation"
@@ -132,8 +133,8 @@ COM_TIMECLOCK_MAX_DAILY_HOURS_DESC="The maximum number of hours an employee is a
 COM_TIMECLOCK_MAX_DAILY_HOURS_PROJECT_DESC="The maximum number of hours an employee is allowed to post in a day in this project. 0 for unlimited."
 COM_TIMECLOCK_MAX_YEARLY_HOURS = "Max Yearly Hours"
 COM_TIMECLOCK_MAX_YEARLY_HOURS_PROJECT_DESC="The maximum number of hours an employee is allowed to post in this project in a year. 0 for unlimited."
-COM_TIMECLOCK_MIN_HOUR_INCREMENT = "Minimum Hour Increment"
-COM_TIMECLOCK_MIN_HOUR_INCREMENT_PROJECT_DESC="The smallest amount of time an employee is allowed to post in this project in a day. 0 for any."
+COM_TIMECLOCK_MIN_DAILY_HOURS = "Min Daily Hours"
+COM_TIMECLOCK_MIN_DAILY_HOURS_PROJECT_DESC="The smallest amount of time an employee is allowed to post in this project in a day. 0 for any."
 COM_TIMECLOCK_DECIMAL_PLACES = "Decimal Places"
 COM_TIMECLOCK_DECIMAL_PLACES_DESC = "Default number of decimal places to show."
 COM_TIMECLOCK_MINIMUM_NOTE = "Minimum Note"
