--- a/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -306,3 +306,7 @@ COM_TIMECLOCK_PTO_CURRENT_DESC="This number is NOT a simple sum of the PTO colum
 
 COM_TIMECLOCK_MAX="Max"
 COM_TIMECLOCK_MIN="Min"
+
+COM_TIMECLOCK_NOTES_REPORT_TITLE="Notes - %s to %s"
+COM_TIMECLOCK_NOTES_REPORT="Notes"
+COM_TIMECLOCK_MONEY="Money"
