--- a/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -153,6 +153,7 @@ COM_TIMECLOCK_EXTRA_SETTINGS = "Autres"
 COM_TIMECLOCK_EXTRA_SETTINGS_DESC="Autres paramètres"
 
 COM_TIMECLOCK_HOLIDAY="Holiday"
+COM_TIMECLOCK_FLOATING_HOLIDAY="Floating Holiday"
 
 COM_TIMECLOCK_DEPARTMENT="Department"
 
@@ -203,9 +204,9 @@ COM_TIMECLOCK_MAX_YEARLY_HOURS = "Max Yearly Hours"
 
 COM_TIMECLOCK_MAX_YEARLY_HOURS_PROJECT_DESC="The maximum number of hours an employee is allowed to post in this project in a year. 0 for unlimited."
 
-COM_TIMECLOCK_MIN_HOUR_INCREMENT = "Minimum Hour Increment"
+COM_TIMECLOCK_MIN_DAILY_HOURS = "Min Daily Hours"
 
-COM_TIMECLOCK_MIN_HOUR_INCREMENT_PROJECT_DESC="The smallest amount of time an employee is allowed to post in this project in a day. 0 for any."
+COM_TIMECLOCK_MIN_DAILY_HOURS_PROJECT_DESC="The smallest amount of time an employee is allowed to post in this project in a day. 0 for any."
 
 COM_TIMECLOCK_DECIMAL_PLACES = "Decimal Places"
 
