The javascript and php to check the max_yearly_hours setting are in place.

--- a/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/site/languages/en-GB/en-GB.com_timeclock.ini
@@ -236,4 +236,4 @@ COM_TIMECLOCK_MIN="Min"
 COM_TIMECLOCK_FLOATING_HOLIDAY_WARNING="Whatever number you enter here will be modified by your holiday percentage on the timesheet display and reports."
 COM_TIMECLOCK_VALID_VALUES="Valid Values"
 
-
+COM_TIMECLOCK_YTD_LEFT="Hours left for the year"
