--- a/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/site/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -315,4 +315,5 @@ COM_TIMECLOCK_MONEY="Money"
 COM_TIMECLOCK_FLOATING_HOLIDAY_WARNING="Whatever number you enter here will be modified by your holiday percentage on the timesheet display and reports."
 COM_TIMECLOCK_VALID_VALUES="Valid Values"
 
+COM_TIMECLOCK_YTD_LEFT="Hours left for the year"
 
