Work on getting the batck publish and unpublish.

--- a/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.ini
+++ b/com_timeclock/admin/languages/fr-FR/fr-FR.com_timeclock.ini
@@ -607,6 +607,8 @@ COM_TIMECLOCK_REPORT="Report"
 
 COM_TIMECLOCK_CATEGORY_NO_USERS="Categories can't have users attached to them."
 
+COM_TIMECLOCK_NO_ITEM_SELECTED="Please first make a selection from the list."
+
 COM_TIMECLOCK_PAYPERIOD="Payperiod"
 
 COM_TIMECLOCK_DATE="Date"
