--- a/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.ini
+++ b/com_timeclock/admin/languages/en-GB/en-GB.com_timeclock.ini
@@ -104,6 +104,7 @@ COM_TIMECLOCK_WCOMP_SETTINGS_DESC="Settings for Worker&rsquo;s Compensation.  Th
 COM_TIMECLOCK_EXTRA_SETTINGS = "Misc"
 COM_TIMECLOCK_EXTRA_SETTINGS_DESC="Extra settings that have no other home."
 
+COM_TIMECLOCK_NO_ITEM_SELECTED="Please first make a selection from the list."
 
 COM_TIMECLOCK_PAYPERIOD="Hourly"
 COM_TIMECLOCK_PAYPERIOD="Payperiod"
